Fixed link dropdown alignment and added hover text effect

--- a/src/Header.css
+++ b/src/Header.css
@@ -23,13 +23,14 @@
     position: absolute;
     z-index: 1;
     background-color: #1f1f1f;
-    padding-top: 15px;
-    padding-bottom: 15px;
-    gap: 15px;
+    top: 50px;
+    padding-bottom: 10px;
 }
 
 .link-dropdown {
-
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .link-dropdown:hover .dropdown-list {
@@ -39,6 +40,14 @@
 .header-link {
     padding: 10px 20px 10px 20px;
     text-decoration: none;
+}
+
+.header-link:hover {
+    text-shadow:
+        -1px -1px 5px dodgerblue,
+        1px -1px 5px dodgerblue,
+        -1px 1px 5px dodgerblue,
+        1px 1px 5px dodgerblue;
 }
 
 .active {
